Fix misaligned inline icons

--- a/shared/src/global-styles/icons.scss
+++ b/shared/src/global-styles/icons.scss
@@ -8,9 +8,7 @@
 // Formats an icon so that it appears inline in the text
 // with height matching the text
 .icon-inline {
-    // SVGs already include padding to account for text baseline,
-    // so align with the bottom of the text
-    vertical-align: bottom;
+    vertical-align: top;
     display: inline-flex;
     align-items: center;
 }
